patient/force-app/main/default/objects/Patient__c/fields/Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending__c</fullName>
    <label>Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>