patient/force-app/main/default/objects/Patient__c/fields/Amount_Waived_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Waived_Off__c</fullName>
    <label>Amount Waived Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>