patient/force-app/main/default/objects/Patient__c/fields/Any_Disability__c.field-meta.xml
<CustomField>
    <fullName>Any_Disability__c</fullName>
    <label>Any Disability</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>