patient/force-app/main/default/objects/Patient__c/fields/Any_Health_History_Related_Information__c.field-meta.xml
<CustomField>
    <fullName>Any_Health_History_Related_Information__c</fullName>
    <label>Any Health History Related Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>