patient/force-app/main/default/objects/Patient__c/fields/Any_other_Information__c.field-meta.xml
<CustomField>
    <fullName>Any_other_Information__c</fullName>
    <label>Any other Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>