patient/force-app/main/default/objects/Patient__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Cork</fullName>
            </value>
            <value>
                <fullName>Limerick</fullName>
            </value>
            <value>
                <fullName>Galway</fullName>
            </value>
            <value>
                <fullName>Waterford</fullName>
            </value>
            <value>
                <fullName>Drogheda</fullName>
            </value>
            <value>
                <fullName>Kilkenny</fullName>
            </value>
            <value>
                <fullName>Wexford</fullName>
            </value>
            <value>
                <fullName>Sligo</fullName>
            </value>
            <value>
                <fullName>Clonmel</fullName>
            </value>
            <value>
                <fullName>Dundalk</fullName>
            </value>
            <value>
                <fullName>Bray</fullName>
            </value>
            <value>
                <fullName>Navan (An Uaimh)</fullName>
            </value>
            <value>
                <fullName>Ennis</fullName>
            </value>
            <value>
                <fullName>Tralee</fullName>
            </value>
            <value>
                <fullName>Carlow</fullName>
            </value>
            <value>
                <fullName>Naas</fullName>
            </value>
            <value>
                <fullName>Athlone</fullName>
            </value>
            <value>
                <fullName>Letterkenny</fullName>
            </value>
            <value>
                <fullName>Tullamore</fullName>
            </value>
            <value>
                <fullName>Killarney</fullName>
            </value>
            <value>
                <fullName>Arklow</fullName>
            </value>
            <value>
                <fullName>Cobh</fullName>
            </value>
            <value>
                <fullName>Castlebar</fullName>
            </value>
            <value>
                <fullName>Midleton</fullName>
            </value>
            <value>
                <fullName>Mallow</fullName>
            </value>
            <value>
                <fullName>Ballina</fullName>
            </value>
            <value>
                <fullName>Enniscorthy</fullName>
            </value>
            <value>
                <fullName>Wicklow</fullName>
            </value>
            <value>
                <fullName>Cavan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>