patient/force-app/main/default/objects/Patient__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Cork</fullName>
            </value>
            <value>
                <fullName>Limerick</fullName>
            </value>
            <value>
                <fullName>Galway</fullName>
            </value>
            <value>
                <fullName>Waterford</fullName>
            </value>
            <value>
                <fullName>Louth</fullName>
            </value>
            <value>
                <fullName>Kilkenny</fullName>
            </value>
            <value>
                <fullName>Wexford</fullName>
            </value>
            <value>
                <fullName>Sligo</fullName>
            </value>
            <value>
                <fullName>Tipperary</fullName>
            </value>
            <value>
                <fullName>Wicklow</fullName>
            </value>
            <value>
                <fullName>Meath</fullName>
            </value>
            <value>
                <fullName>Clare</fullName>
            </value>
            <value>
                <fullName>Kerry</fullName>
            </value>
            <value>
                <fullName>Carlow</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>Westmeath</fullName>
            </value>
            <value>
                <fullName>Donegal</fullName>
            </value>
            <value>
                <fullName>Offaly</fullName>
            </value>
            <value>
                <fullName>Mayo</fullName>
            </value>
            <value>
                <fullName>Cavan</fullName>
            </value>
            <value>
                <fullName>Longford</fullName>
            </value>
            <value>
                <fullName>Monaghan</fullName>
            </value>
            <value>
                <fullName>Laois</fullName>
            </value>
            <value>
                <fullName>Dublin (Fingal)</fullName>
            </value>
            <value>
                <fullName>Roscommon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>