patient/force-app/main/default/objects/Patient__c/fields/Death_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Date__c</fullName>
    <label>Death Date</label>
    <type>DateTime</type>
</CustomField>