patient/force-app/main/default/objects/Patient__c/fields/Death_Reason__c.field-meta.xml
<CustomField>
    <fullName>Death_Reason__c</fullName>
    <label>Death Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>