patient/force-app/main/default/objects/Patient__c/fields/Doctor_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>