patient/force-app/main/default/objects/Patient__c/fields/Doctor_s_Prescribed_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Prescribed_Medicine__c</fullName>
    <label>Doctor&apos;s Prescribed Medicine</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>