patient/force-app/main/default/objects/Patient__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(  AND(NOT(ISBLANK(First_Name__c)),NOT(ISBLANK(Middle_Name__c)),NOT(ISBLANK(Last_Name__c)))     , First_Name__c+&apos; &apos;+Middle_Name__c+&apos; &apos;+Last_Name__c,  IF(AND(NOT(ISBLANK(First_Name__c)),NOT(ISBLANK(Last_Name__c))), First_Name__c+&apos; &apos;+Last_Name__c,  First_Name__c ))</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>