patient/force-app/main/default/objects/Patient__c/fields/Guardian_Address__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Address__c</fullName>
    <label>Guardian Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>