patient/force-app/main/default/objects/Patient__c/fields/Guardian_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact_Number__c</fullName>
    <label>Guardian Contact Number</label>
    <type>Phone</type>
</CustomField>