patient/force-app/main/default/objects/Patient__c/fields/Guardian_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Relationship__c</fullName>
    <label>Guardian Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>