patient/force-app/main/default/objects/Patient__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <inlineHelpText>Enter patient&apos;s middle name</inlineHelpText>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>