patient/force-app/main/default/objects/Patient__c/fields/Parent_Medical_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Medical_Record_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>First Medical record of patient (if any)</inlineHelpText>
    <label>Parent Medical Record Number</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Parent Medical Record</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>