patient/force-app/main/default/objects/Patient__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <externalId>true</externalId>
    <label>Passport Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>