patient/force-app/main/default/objects/Patient__c/fields/Patient_need_to_take_any_tests__c.field-meta.xml
<CustomField>
    <fullName>Patient_need_to_take_any_tests__c</fullName>
    <label>Patient need to take any tests</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>